--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Main App</h1>
-<a href='/home'>Home</a>
-<a href='/settings'>Settings</a>
+<a routerLink='/home'>Home</a>
+<a routerLink='/settings'>Settings</a>
 
 <router-outlet></router-outlet>
