--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Main App</h1>
-<a routerLink='home'>Home</a>
-<a routerLink='settings'>Settings</a>
+<a [routerLink]='homeRoute'>Home</a>
+<a [routerLink]='settingsRoute'>Settings</a>
 
 <router-outlet></router-outlet>
