--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Main App</h1>
-<a [routerLink]='homeRoute'>Home</a>
-<a [routerLink]='settingsRoute'>Settings</a>
+<a *ngFor="let route of routes" [routerLink]="route.url">{{ route.linkName }}</a>
+
 
 <router-outlet></router-outlet>
