--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,2 +1,3 @@
 <H1>Settings</H1>
+<a *ngFor="let route of routes" [routerLink]="route.url">| {{ route.linkName}} | </a>
 <router-outlet></router-outlet>
